--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,12 @@
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 6rem; /* Offset for sticky header */
+  scroll-padding-top: 4rem;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @layer base {
